--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Index.cshtml
@@ -5,56 +5,110 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Complaint[0].Subject)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Complaint[0].Content)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Complaint[0].IsReviewed)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Complaint[0].IsAnonymous)
-                </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Complaint[0].ApplicationUser)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Complaint) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Subject)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Content)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsReviewed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IsAnonymous)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ApplicationUser.Id)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+@section Styles
+    {
+    <style>
+        body {
+            padding-top: 4em;
+        }
+    </style>
 }
-    </tbody>
-</table>
+
+    <div class="row container-fluid">
+        <div class="col-lg-10 col-md-12">
+            <div class="card">
+                <div class="card-header card-header-tabs card-header-primary">
+                    <div class="nav-tabs-navigation">
+                        <div class="nav-tabs-wrapper">
+                            <span class="nav-tabs-title">Complaints:</span>
+                            <ul class="nav nav-tabs" data-tabs="tabs">
+                                <li class="nav-item mr-1">
+                                    <a class="nav-link active show" href="#verifying" data-toggle="tab">
+                                        <i class="material-icons">cached</i> Verifying
+                                        <div class="ripple-container"></div>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active show" href="#reviewed" data-toggle="tab">
+                                        <i class="material-icons">done_all</i> Reviewed
+                                        <div class="ripple-container"></div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="tab-content">
+                        <div class="tab-pane active show" id="verifying">
+                            <table class="table">
+                                <tbody>
+                                    @{
+                                        foreach (var item in Model.Complaint)
+                                        {
+                                            if (item.IsReviewed == false)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        <form method="post">
+                                                            <input type="hidden" asp-for="@item.Id" />
+
+                                                            <div class="form-check">
+                                                                <label class="form-check-label">
+                                                                    <input @Util.FuckOff(item) type="submit" value="Save" class="form-check-input">
+                                                                    <span class="form-check-sign">
+                                                                        <span class="check"></span>
+                                                                    </span>
+                                                                </label>
+                                                            </div>
+                                                        </form>
+                                                    </td>
+                                                    <td  onclick="location.href = '@(Url.Content("Complaint/Details?id=" + item.Id))'">
+                                                        @item.Subject
+                                                    </td>
+                                                </tr>
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="tab-pane" id="reviewed">
+                            <table class="table">
+                                <tbody>
+                                    @{
+                                        foreach (var item in Model.Complaint)
+                                        {
+                                            if (item.IsReviewed == true)
+                                            {
+                                            <tr>
+                                                <td>
+                                                    <div class="form-check">
+                                                        <label class="form-check-label">
+                                                            <input class="form-check-input" type="checkbox" checked disabled>
+                                                            <span class="form-check-sign">
+                                                                <span class="check"></span>
+                                                            </span>
+                                                        </label>
+                                                    </div>
+                                                </td>
+                                                <td onclick="location.href = '@(Url.Content("Complaint/Details?id=" + item.Id))'">
+                                                    @item.Subject
+                                                </td>
+                                            </tr>
+
+                                            }
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <a asp-page="./Create" class="btn btn-primary pull-right">New Complaint</a>
+        </div>
+    </div>
