--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Index.cshtml
@@ -68,7 +68,7 @@
                                         </td>
                                         <td class="td-actions">
                                             <a asp-page="./Edit" asp-route-id="@item.Id" title="Edit this transaction" class="btn btn-link btn-sm">
-                                                <i class="material-icons">edit</i>
+                                                <i class="material-icons purple-ic">edit</i>
                                             </a>
                                         </td>
                                     </tr>
