--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Delete.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Complaint/Delete.cshtml
@@ -5,48 +5,66 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
+@section Styles
+    {
+    <style>
+        body {
+            padding-top: 4em;
+        }
+    </style>
+}
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Complaint</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Complaint.Subject)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complaint.Subject)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Complaint.Content)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complaint.Content)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Complaint.IsReviewed)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complaint.IsReviewed)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Complaint.IsAnonymous)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complaint.IsAnonymous)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Complaint.ApplicationUser)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Complaint.ApplicationUser.Id)
-        </dd>
-    </dl>
-    
-    <form method="post">
-        <input type="hidden" asp-for="Complaint.Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-page="./Index">Back to List</a>
-    </form>
-</div>
+    <div class="container-fluid">
+        <h2>Delete</h2>
+
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>Complaint</h4>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Complaint.Subject)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Complaint.Subject)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Complaint.Content)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Complaint.Content)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Complaint.IsReviewed)
+                </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Complaint.IsReviewed)
+                </dd>
+                @{
+                    if (Model.Complaint.IsAnonymous)
+                    {
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Complaint.IsAnonymous)
+                        </dt>
+                    }
+                    else
+                    {
+                        <dt>
+                            @Html.DisplayNameFor(model => model.Complaint.ApplicationUser)
+                        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.Complaint.ApplicationUser.Id)
+                        </dd>
+
+                    }
+                  }
+            </dl>
+
+            <form method="post">
+                <input type="hidden" asp-for="Complaint.Id" />
+                <input type="submit" value="Delete" class="btn btn-danger"/>
+                <a asp-page="./Index" class="btn btn-grey">Back</a>
+            </form>
+        </div>
+    </div>
+
