--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Details.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Details.cshtml
@@ -91,7 +91,7 @@
                             <div class="col-md-8">
                                 <div class="form-group">
                                     <label asp-for="ApplicationUser.JobPosition" class="control-label"></label>
-                                    <p class="form-control">@Model.ApplicationUser.JobPosition.Name</p>
+                                    <p class="form-control">@( Model.ApplicationUser.JobPosition != null ? Model.ApplicationUser.JobPosition.Name : "")</p>
                                 </div>
                             </div>
                         </div>
