--- a/ManagementSystem/ManagementSystem.Web/Pages/Product/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Product/_Layout.cshtml
@@ -2,7 +2,7 @@
     Layout = "/Pages/_Layout.cshtml";
 }
 @section Styles {
-    @RenderSection("Styles", required: false);
+    @RenderSection("Styles", required: false)
 }
 
 <div class="wrapper">
@@ -62,12 +62,12 @@
                     </a>
                 </li>
 
-                <li class="nav-item active-pro">
+                @*<li class="nav-item active-pro">
                     <a class="nav-link" href="../examples/upgrade.html">
                         <i class="material-icons">unarchive</i>
                         <p>Upgrade to PRO</p>
                     </a>
-                </li>
+                </li>*@
             </ul>
         </div>
     </div>
