--- a/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/_Layout.cshtml
@@ -16,7 +16,7 @@
     <link href="~/css/material-dashboard.css" rel="stylesheet" />
     <!-- Custom style -->
     <link href="~/css/style.css" rel="stylesheet">
-    @RenderSection("Styles", required: false);
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <header>
@@ -87,8 +87,8 @@
                 Tip 2: you can also add an image using data-image tag
             -->
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text logo-normal">
-                    Creative Tim
+                <a href="" class="simple-text logo-normal">
+                    Management System
                 </a>
             </div>
             <div class="sidebar-wrapper">
@@ -117,7 +117,7 @@
                             <p>Product Management</p>
                         </a>
                     </li>
-                    <li class="nav-item ">
+                    @*<li class="nav-item ">
                         <a class="nav-link" href="../examples/icons.html">
                             <i class="material-icons">bubble_chart</i>
                             <p>Icons</p>
@@ -140,7 +140,7 @@
                             <i class="material-icons">unarchive</i>
                             <p>Upgrade to PRO</p>
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </div>
         </div>
