--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/Index.cshtml
@@ -4,16 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-@section Styles
-    {
-    <style>
-        body {
-            padding-top: 4em;
-        }
-    </style>
-}
 
-    <div class="row container-fluid">
+<div class="container">
+    <h2>Human Resource Management</h2>
+
+    <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="card card-stats">
                 <div class="card-header card-header-info card-header-icon">
@@ -38,7 +33,7 @@
                         <a href="HumanResource/Complaint"></a>
                     </div>
                     <p class="card-category">Complaints</p>
-                    <h3 class="card-title">@Model.CountComplaints</h3>
+                    <h3 class="card-title">+@Model.CountComplaints</h3>
                 </div>
                 <div class="card-footer">
                     <div class="stats">
@@ -49,4 +44,5 @@
         </div>
 
     </div>
+</div>
 
