--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Details.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Details.cshtml
@@ -5,17 +5,7 @@
     ViewData["Title"] = "Details";
 }
 
-
-@section Styles
-    {
-    <style>
-        body {
-            padding-top: 4em;
-        }
-    </style>
-}
-
-<div class="container-fluid">
+<div class="container mt-2">
     <div class="row">
         <div class="col-md-8">
             <div class="card">
