--- a/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Edit.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/HumanResource/UserProfile/Edit.cshtml
@@ -5,17 +5,7 @@
     ViewData["Title"] = "Edit";
 }
 
-
-@section Styles
-    {
-    <style>
-        body {
-            padding-top: 4em;
-        }
-    </style>
-}
-
-<div class="container-fluid">
+<div class="container mt-2">
     <div class="row">
         <div class="col-md-8">
             <div class="card">
@@ -29,6 +19,11 @@
                         <input type="hidden" asp-for="ApplicationUser.Id" />
                         <input type="hidden" asp-for="ApplicationUser.ConcurrencyStamp" />
 
+                        <div class="form-group">
+                            <label asp-for="ApplicationUser.Email" class="control-label"></label>
+                            <input asp-for="ApplicationUser.Email" class="form-control" />
+                            <span asp-validation-for="ApplicationUser.Email" class="text-danger"></span>
+                        </div>
 
                         <div class="row">
                             <div class="col-md-6">
