--- a/ManagementSystem/ManagementSystem.Web/Pages/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="container mb-5">
+<div class="container mb-5 padding-top">
     <h1>DASHBOARD</h1>
     <div class="row">
         <div class="col-lg-3 col-md-6 col-sm-6">
