--- a/ManagementSystem/ManagementSystem.Web/Pages/Finance/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Finance/Index.cshtml
@@ -69,7 +69,7 @@
                             }
 
                         </div>
-                        <div class="align-self-center"><a href="~/Finance/OperationCost" class="btn btn-orange">More detail</a></div>
+                        <div class="align-self-center"><a asp-page="./OperationCost/Index" asp-route-year="2018" class="btn btn-orange">More detail</a></div>
                     </div>
                 </div>
                 <div class="card-body table-responsive">
