--- a/ManagementSystem/ManagementSystem.Web/Pages/Product/Index.cshtml
+++ b/ManagementSystem/ManagementSystem.Web/Pages/Product/Index.cshtml
@@ -49,7 +49,7 @@
                                             @product.Description
                                         </td>
                                         <td>
-                                            @product.Builds.LastOrDefault()
+                                            @product.Builds.LastOrDefault()?.Name
                                         </td>
                                         <td>
                                             Unassigned.
